Fix: overflow

--- a/src/main-page/main-page-style.css
+++ b/src/main-page/main-page-style.css
@@ -62,7 +62,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    height: max-content;
+    height: 0;
     overflow: hidden;
     width: 100%;
     border-radius: 50px;
